// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render visible banner, with custom theme 1`] = `
<View
  collapsable={false}
  style={
    Object {
      "alignSelf": undefined,
      "bottom": undefined,
      "end": undefined,
      "flex": undefined,
      "height": undefined,
      "left": undefined,
      "opacity": 1,
      "position": undefined,
      "right": undefined,
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 0.15,
      "shadowRadius": 3,
      "start": undefined,
      "top": undefined,
      "transform": undefined,
      "width": undefined,
    }
  }
  testID="surface-outer-layer"
>
  <View
    collapsable={false}
    style={
      Object {
        "backgroundColor": "rgb(247, 243, 249)",
        "flex": undefined,
        "shadowColor": "#000",
        "shadowOffset": Object {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 1,
      }
    }
    testID="surface"
  >
    <View
      style={
        Array [
          Object {
            "alignSelf": "center",
            "maxWidth": 960,
            "overflow": "hidden",
            "width": "100%",
          },
          undefined,
        ]
      }
    >
      <View
        collapsable={false}
        style={
          Object {
            "height": 0,
          }
        }
      />
      <View
        collapsable={false}
        onLayout={[Function]}
        style={Object {}}
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "flex-start",
              "marginBottom": 0,
              "marginHorizontal": 8,
              "marginTop": 16,
            }
          }
        >
          <Text
            accessibilityLiveRegion="polite"
            accessibilityRole="alert"
            style={
              Array [
                Object {
                  "textAlign": "left",
                },
                Object {
                  "color": "rgba(28, 27, 31, 1)",
                  "fontFamily": "System",
                  "fontWeight": "400",
                  "letterSpacing": 0,
                },
                Object {
                  "writingDirection": "ltr",
                },
                Array [
                  Object {
                    "flex": 1,
                    "margin": 8,
                  },
                  Object {
                    "color": "rgba(28, 27, 31, 1)",
                  },
                ],
              ]
            }
          >
            Custom theme
          </Text>
        </View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "flex-end",
              "margin": 4,
            }
          }
        >
          <View
            collapsable={false}
            style={
              Object {
                "alignSelf": undefined,
                "bottom": undefined,
                "end": undefined,
                "flex": undefined,
                "height": undefined,
                "left": undefined,
                "margin": 4,
                "opacity": undefined,
                "position": undefined,
                "right": undefined,
                "shadowColor": "#000",
                "shadowOffset": Object {
                  "height": 0,
                  "width": 0,
                },
                "shadowOpacity": 0,
                "shadowRadius": 0,
                "start": undefined,
                "top": undefined,
                "transform": undefined,
                "width": undefined,
              }
            }
            testID="button-container-outer-layer"
          >
            <View
              collapsable={false}
              style={
                Object {
                  "backgroundColor": "transparent",
                  "borderColor": "transparent",
                  "borderRadius": 20,
                  "borderStyle": "solid",
                  "borderWidth": 0,
                  "flex": undefined,
                  "minWidth": "auto",
                  "shadowColor": "#000",
                  "shadowOffset": Object {
                    "height": 0,
                    "width": 0,
                  },
                  "shadowOpacity": 0,
                  "shadowRadius": 0,
                }
              }
              testID="button-container"
            >
              <View
                accessibilityRole="button"
                accessibilityState={
                  Object {
                    "disabled": false,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Array [
                    Object {
                      "overflow": "hidden",
                    },
                    false,
                    Object {
                      "borderRadius": 20,
                    },
                  ]
                }
                testID="button"
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "justifyContent": "center",
                      },
                      undefined,
                    ]
                  }
                >
                  <Text
                    numberOfLines={1}
                    selectable={false}
                    style={
                      Array [
                        Object {
                          "fontFamily": "System",
                          "fontSize": 14,
                          "fontWeight": "500",
                          "letterSpacing": 0.1,
                          "lineHeight": 20,
                        },
                        Object {
                          "textAlign": "left",
                        },
                        Object {
                          "color": "rgba(28, 27, 31, 1)",
                          "writingDirection": "ltr",
                        },
                        Array [
                          Object {
                            "marginHorizontal": 16,
                            "marginVertical": 9,
                            "textAlign": "center",
                          },
                          false,
                          Object {
                            "marginHorizontal": 12,
                          },
                          Object {
                            "marginHorizontal": 8,
                          },
                          false,
                          Object {
                            "color": "#043",
                            "fontFamily": "System",
                            "fontSize": 14,
                            "fontWeight": "500",
                            "letterSpacing": 0.1,
                            "lineHeight": 20,
                          },
                          undefined,
                        ],
                      ]
                    }
                    testID="button-text"
                  >
                    first
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders hidden banner, without action buttons and without image 1`] = `
<View
  collapsable={false}
  style={
    Object {
      "alignSelf": undefined,
      "bottom": undefined,
      "end": undefined,
      "flex": undefined,
      "height": undefined,
      "left": undefined,
      "opacity": 0,
      "position": undefined,
      "right": undefined,
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 0.15,
      "shadowRadius": 3,
      "start": undefined,
      "top": undefined,
      "transform": undefined,
      "width": undefined,
    }
  }
  testID="surface-outer-layer"
>
  <View
    collapsable={false}
    style={
      Object {
        "backgroundColor": "rgb(247, 243, 249)",
        "flex": undefined,
        "shadowColor": "#000",
        "shadowOffset": Object {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 1,
      }
    }
    testID="surface"
  >
    <View
      style={
        Array [
          Object {
            "alignSelf": "center",
            "maxWidth": 960,
            "overflow": "hidden",
            "width": "100%",
          },
          undefined,
        ]
      }
    >
      <View
        collapsable={false}
        style={
          Object {
            "height": 0,
          }
        }
      />
      <View
        collapsable={false}
        onLayout={[Function]}
        style={
          Object {
            "opacity": 0,
            "position": "absolute",
            "top": 0,
            "transform": Array [
              Object {
                "translateY": -0,
              },
            ],
            "width": "100%",
          }
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "flex-start",
              "marginBottom": 0,
              "marginHorizontal": 8,
              "marginTop": 16,
            }
          }
        >
          <Text
            accessibilityLiveRegion="none"
            accessibilityRole="alert"
            style={
              Array [
                Object {
                  "textAlign": "left",
                },
                Object {
                  "color": "rgba(28, 27, 31, 1)",
                  "fontFamily": "System",
                  "fontWeight": "400",
                  "letterSpacing": 0,
                },
                Object {
                  "writingDirection": "ltr",
                },
                Array [
                  Object {
                    "flex": 1,
                    "margin": 8,
                  },
                  Object {
                    "color": "rgba(28, 27, 31, 1)",
                  },
                ],
              ]
            }
          >
            Two line text string with two actions. One to two lines is preferable on mobile.
          </Text>
        </View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "flex-end",
              "margin": 4,
            }
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`renders visible banner, with action buttons and with image 1`] = `
<View
  collapsable={false}
  style={
    Object {
      "alignSelf": undefined,
      "bottom": undefined,
      "end": undefined,
      "flex": undefined,
      "height": undefined,
      "left": undefined,
      "opacity": 1,
      "position": undefined,
      "right": undefined,
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 0.15,
      "shadowRadius": 3,
      "start": undefined,
      "top": undefined,
      "transform": undefined,
      "width": undefined,
    }
  }
  testID="surface-outer-layer"
>
  <View
    collapsable={false}
    style={
      Object {
        "backgroundColor": "rgb(247, 243, 249)",
        "flex": undefined,
        "shadowColor": "#000",
        "shadowOffset": Object {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 1,
      }
    }
    testID="surface"
  >
    <View
      style={
        Array [
          Object {
            "alignSelf": "center",
            "maxWidth": 960,
            "overflow": "hidden",
            "width": "100%",
          },
          undefined,
        ]
      }
    >
      <View
        collapsable={false}
        style={
          Object {
            "height": 0,
          }
        }
      />
      <View
        collapsable={false}
        onLayout={[Function]}
        style={Object {}}
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "flex-start",
              "marginBottom": 0,
              "marginHorizontal": 8,
              "marginTop": 16,
            }
          }
        >
          <View
            style={
              Object {
                "margin": 8,
              }
            }
          >
            <Image
              accessibilityIgnoresInvertColors={true}
              source={
                Object {
                  "uri": "https://callstack.com/images/team/Satya.png",
                }
              }
              style={
                Object {
                  "height": 40,
                  "width": 40,
                }
              }
            />
          </View>
          <Text
            accessibilityLiveRegion="polite"
            accessibilityRole="alert"
            style={
              Array [
                Object {
                  "textAlign": "left",
                },
                Object {
                  "color": "rgba(28, 27, 31, 1)",
                  "fontFamily": "System",
                  "fontWeight": "400",
                  "letterSpacing": 0,
                },
                Object {
                  "writingDirection": "ltr",
                },
                Array [
                  Object {
                    "flex": 1,
                    "margin": 8,
                  },
                  Object {
                    "color": "rgba(28, 27, 31, 1)",
                  },
                ],
              ]
            }
          >
            Two line text string with two actions. One to two lines is preferable on mobile.
          </Text>
        </View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "flex-end",
              "margin": 4,
            }
          }
        >
          <View
            collapsable={false}
            style={
              Object {
                "alignSelf": undefined,
                "bottom": undefined,
                "end": undefined,
                "flex": undefined,
                "height": undefined,
                "left": undefined,
                "margin": 4,
                "opacity": undefined,
                "position": undefined,
                "right": undefined,
                "shadowColor": "#000",
                "shadowOffset": Object {
                  "height": 0,
                  "width": 0,
                },
                "shadowOpacity": 0,
                "shadowRadius": 0,
                "start": undefined,
                "top": undefined,
                "transform": undefined,
                "width": undefined,
              }
            }
            testID="button-container-outer-layer"
          >
            <View
              collapsable={false}
              style={
                Object {
                  "backgroundColor": "transparent",
                  "borderColor": "transparent",
                  "borderRadius": 20,
                  "borderStyle": "solid",
                  "borderWidth": 0,
                  "flex": undefined,
                  "minWidth": "auto",
                  "shadowColor": "#000",
                  "shadowOffset": Object {
                    "height": 0,
                    "width": 0,
                  },
                  "shadowOpacity": 0,
                  "shadowRadius": 0,
                }
              }
              testID="button-container"
            >
              <View
                accessibilityRole="button"
                accessibilityState={
                  Object {
                    "disabled": false,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Array [
                    Object {
                      "overflow": "hidden",
                    },
                    false,
                    Object {
                      "borderRadius": 20,
                    },
                  ]
                }
                testID="button"
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "justifyContent": "center",
                      },
                      undefined,
                    ]
                  }
                >
                  <Text
                    numberOfLines={1}
                    selectable={false}
                    style={
                      Array [
                        Object {
                          "fontFamily": "System",
                          "fontSize": 14,
                          "fontWeight": "500",
                          "letterSpacing": 0.1,
                          "lineHeight": 20,
                        },
                        Object {
                          "textAlign": "left",
                        },
                        Object {
                          "color": "rgba(28, 27, 31, 1)",
                          "writingDirection": "ltr",
                        },
                        Array [
                          Object {
                            "marginHorizontal": 16,
                            "marginVertical": 9,
                            "textAlign": "center",
                          },
                          false,
                          Object {
                            "marginHorizontal": 12,
                          },
                          Object {
                            "marginHorizontal": 8,
                          },
                          false,
                          Object {
                            "color": "rgba(103, 80, 164, 1)",
                            "fontFamily": "System",
                            "fontSize": 14,
                            "fontWeight": "500",
                            "letterSpacing": 0.1,
                            "lineHeight": 20,
                          },
                          undefined,
                        ],
                      ]
                    }
                    testID="button-text"
                  >
                    first
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders visible banner, with action buttons and without image 1`] = `
<View
  collapsable={false}
  style={
    Object {
      "alignSelf": undefined,
      "bottom": undefined,
      "end": undefined,
      "flex": undefined,
      "height": undefined,
      "left": undefined,
      "opacity": 1,
      "position": undefined,
      "right": undefined,
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 0.15,
      "shadowRadius": 3,
      "start": undefined,
      "top": undefined,
      "transform": undefined,
      "width": undefined,
    }
  }
  testID="surface-outer-layer"
>
  <View
    collapsable={false}
    style={
      Object {
        "backgroundColor": "rgb(247, 243, 249)",
        "flex": undefined,
        "shadowColor": "#000",
        "shadowOffset": Object {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 1,
      }
    }
    testID="surface"
  >
    <View
      style={
        Array [
          Object {
            "alignSelf": "center",
            "maxWidth": 960,
            "overflow": "hidden",
            "width": "100%",
          },
          undefined,
        ]
      }
    >
      <View
        collapsable={false}
        style={
          Object {
            "height": 0,
          }
        }
      />
      <View
        collapsable={false}
        onLayout={[Function]}
        style={Object {}}
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "flex-start",
              "marginBottom": 0,
              "marginHorizontal": 8,
              "marginTop": 16,
            }
          }
        >
          <Text
            accessibilityLiveRegion="polite"
            accessibilityRole="alert"
            style={
              Array [
                Object {
                  "textAlign": "left",
                },
                Object {
                  "color": "rgba(28, 27, 31, 1)",
                  "fontFamily": "System",
                  "fontWeight": "400",
                  "letterSpacing": 0,
                },
                Object {
                  "writingDirection": "ltr",
                },
                Array [
                  Object {
                    "flex": 1,
                    "margin": 8,
                  },
                  Object {
                    "color": "rgba(28, 27, 31, 1)",
                  },
                ],
              ]
            }
          >
            Two line text string with two actions. One to two lines is preferable on mobile.
          </Text>
        </View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "flex-end",
              "margin": 4,
            }
          }
        >
          <View
            collapsable={false}
            style={
              Object {
                "alignSelf": undefined,
                "bottom": undefined,
                "end": undefined,
                "flex": undefined,
                "height": undefined,
                "left": undefined,
                "margin": 4,
                "opacity": undefined,
                "position": undefined,
                "right": undefined,
                "shadowColor": "#000",
                "shadowOffset": Object {
                  "height": 0,
                  "width": 0,
                },
                "shadowOpacity": 0,
                "shadowRadius": 0,
                "start": undefined,
                "top": undefined,
                "transform": undefined,
                "width": undefined,
              }
            }
            testID="button-container-outer-layer"
          >
            <View
              collapsable={false}
              style={
                Object {
                  "backgroundColor": "transparent",
                  "borderColor": "transparent",
                  "borderRadius": 20,
                  "borderStyle": "solid",
                  "borderWidth": 0,
                  "flex": undefined,
                  "minWidth": "auto",
                  "shadowColor": "#000",
                  "shadowOffset": Object {
                    "height": 0,
                    "width": 0,
                  },
                  "shadowOpacity": 0,
                  "shadowRadius": 0,
                }
              }
              testID="button-container"
            >
              <View
                accessibilityRole="button"
                accessibilityState={
                  Object {
                    "disabled": false,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Array [
                    Object {
                      "overflow": "hidden",
                    },
                    false,
                    Object {
                      "borderRadius": 20,
                    },
                  ]
                }
                testID="button"
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "justifyContent": "center",
                      },
                      undefined,
                    ]
                  }
                >
                  <Text
                    numberOfLines={1}
                    selectable={false}
                    style={
                      Array [
                        Object {
                          "fontFamily": "System",
                          "fontSize": 14,
                          "fontWeight": "500",
                          "letterSpacing": 0.1,
                          "lineHeight": 20,
                        },
                        Object {
                          "textAlign": "left",
                        },
                        Object {
                          "color": "rgba(28, 27, 31, 1)",
                          "writingDirection": "ltr",
                        },
                        Array [
                          Object {
                            "marginHorizontal": 16,
                            "marginVertical": 9,
                            "textAlign": "center",
                          },
                          false,
                          Object {
                            "marginHorizontal": 12,
                          },
                          Object {
                            "marginHorizontal": 8,
                          },
                          false,
                          Object {
                            "color": "rgba(103, 80, 164, 1)",
                            "fontFamily": "System",
                            "fontSize": 14,
                            "fontWeight": "500",
                            "letterSpacing": 0.1,
                            "lineHeight": 20,
                          },
                          undefined,
                        ],
                      ]
                    }
                    testID="button-text"
                  >
                    first
                  </Text>
                </View>
              </View>
            </View>
          </View>
          <View
            collapsable={false}
            style={
              Object {
                "alignSelf": undefined,
                "bottom": undefined,
                "end": undefined,
                "flex": undefined,
                "height": undefined,
                "left": undefined,
                "margin": 4,
                "opacity": undefined,
                "position": undefined,
                "right": undefined,
                "shadowColor": "#000",
                "shadowOffset": Object {
                  "height": 0,
                  "width": 0,
                },
                "shadowOpacity": 0,
                "shadowRadius": 0,
                "start": undefined,
                "top": undefined,
                "transform": undefined,
                "width": undefined,
              }
            }
            testID="button-container-outer-layer"
          >
            <View
              collapsable={false}
              style={
                Object {
                  "backgroundColor": "transparent",
                  "borderColor": "transparent",
                  "borderRadius": 20,
                  "borderStyle": "solid",
                  "borderWidth": 0,
                  "flex": undefined,
                  "minWidth": "auto",
                  "shadowColor": "#000",
                  "shadowOffset": Object {
                    "height": 0,
                    "width": 0,
                  },
                  "shadowOpacity": 0,
                  "shadowRadius": 0,
                }
              }
              testID="button-container"
            >
              <View
                accessibilityRole="button"
                accessibilityState={
                  Object {
                    "disabled": false,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Array [
                    Object {
                      "overflow": "hidden",
                    },
                    false,
                    Object {
                      "borderRadius": 20,
                    },
                  ]
                }
                testID="button"
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "justifyContent": "center",
                      },
                      undefined,
                    ]
                  }
                >
                  <Text
                    numberOfLines={1}
                    selectable={false}
                    style={
                      Array [
                        Object {
                          "fontFamily": "System",
                          "fontSize": 14,
                          "fontWeight": "500",
                          "letterSpacing": 0.1,
                          "lineHeight": 20,
                        },
                        Object {
                          "textAlign": "left",
                        },
                        Object {
                          "color": "rgba(28, 27, 31, 1)",
                          "writingDirection": "ltr",
                        },
                        Array [
                          Object {
                            "marginHorizontal": 16,
                            "marginVertical": 9,
                            "textAlign": "center",
                          },
                          false,
                          Object {
                            "marginHorizontal": 12,
                          },
                          Object {
                            "marginHorizontal": 8,
                          },
                          false,
                          Object {
                            "color": "rgba(103, 80, 164, 1)",
                            "fontFamily": "System",
                            "fontSize": 14,
                            "fontWeight": "500",
                            "letterSpacing": 0.1,
                            "lineHeight": 20,
                          },
                          undefined,
                        ],
                      ]
                    }
                    testID="button-text"
                  >
                    second
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders visible banner, without action buttons and with image 1`] = `
<View
  collapsable={false}
  style={
    Object {
      "alignSelf": undefined,
      "bottom": undefined,
      "end": undefined,
      "flex": undefined,
      "height": undefined,
      "left": undefined,
      "opacity": 1,
      "position": undefined,
      "right": undefined,
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 0.15,
      "shadowRadius": 3,
      "start": undefined,
      "top": undefined,
      "transform": undefined,
      "width": undefined,
    }
  }
  testID="surface-outer-layer"
>
  <View
    collapsable={false}
    style={
      Object {
        "backgroundColor": "rgb(247, 243, 249)",
        "flex": undefined,
        "shadowColor": "#000",
        "shadowOffset": Object {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 1,
      }
    }
    testID="surface"
  >
    <View
      style={
        Array [
          Object {
            "alignSelf": "center",
            "maxWidth": 960,
            "overflow": "hidden",
            "width": "100%",
          },
          undefined,
        ]
      }
    >
      <View
        collapsable={false}
        style={
          Object {
            "height": 0,
          }
        }
      />
      <View
        collapsable={false}
        onLayout={[Function]}
        style={Object {}}
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "flex-start",
              "marginBottom": 0,
              "marginHorizontal": 8,
              "marginTop": 16,
            }
          }
        >
          <View
            style={
              Object {
                "margin": 8,
              }
            }
          >
            <Image
              accessibilityIgnoresInvertColors={true}
              source={
                Object {
                  "uri": "https://callstack.com/images/team/Satya.png",
                }
              }
              style={
                Object {
                  "height": 40,
                  "width": 40,
                }
              }
            />
          </View>
          <Text
            accessibilityLiveRegion="polite"
            accessibilityRole="alert"
            style={
              Array [
                Object {
                  "textAlign": "left",
                },
                Object {
                  "color": "rgba(28, 27, 31, 1)",
                  "fontFamily": "System",
                  "fontWeight": "400",
                  "letterSpacing": 0,
                },
                Object {
                  "writingDirection": "ltr",
                },
                Array [
                  Object {
                    "flex": 1,
                    "margin": 8,
                  },
                  Object {
                    "color": "rgba(28, 27, 31, 1)",
                  },
                ],
              ]
            }
          >
            Two line text string with two actions. One to two lines is preferable on mobile.
          </Text>
        </View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "flex-end",
              "margin": 4,
            }
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`renders visible banner, without action buttons and without image 1`] = `
<View
  collapsable={false}
  style={
    Object {
      "alignSelf": undefined,
      "bottom": undefined,
      "end": undefined,
      "flex": undefined,
      "height": undefined,
      "left": undefined,
      "opacity": 1,
      "position": undefined,
      "right": undefined,
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 0.15,
      "shadowRadius": 3,
      "start": undefined,
      "top": undefined,
      "transform": undefined,
      "width": undefined,
    }
  }
  testID="surface-outer-layer"
>
  <View
    collapsable={false}
    style={
      Object {
        "backgroundColor": "rgb(247, 243, 249)",
        "flex": undefined,
        "shadowColor": "#000",
        "shadowOffset": Object {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 1,
      }
    }
    testID="surface"
  >
    <View
      style={
        Array [
          Object {
            "alignSelf": "center",
            "maxWidth": 960,
            "overflow": "hidden",
            "width": "100%",
          },
          undefined,
        ]
      }
    >
      <View
        collapsable={false}
        style={
          Object {
            "height": 0,
          }
        }
      />
      <View
        collapsable={false}
        onLayout={[Function]}
        style={Object {}}
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "flex-start",
              "marginBottom": 0,
              "marginHorizontal": 8,
              "marginTop": 16,
            }
          }
        >
          <Text
            accessibilityLiveRegion="polite"
            accessibilityRole="alert"
            style={
              Array [
                Object {
                  "textAlign": "left",
                },
                Object {
                  "color": "rgba(28, 27, 31, 1)",
                  "fontFamily": "System",
                  "fontWeight": "400",
                  "letterSpacing": 0,
                },
                Object {
                  "writingDirection": "ltr",
                },
                Array [
                  Object {
                    "flex": 1,
                    "margin": 8,
                  },
                  Object {
                    "color": "rgba(28, 27, 31, 1)",
                  },
                ],
              ]
            }
          >
            Two line text string with two actions. One to two lines is preferable on mobile.
          </Text>
        </View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "flex-end",
              "margin": 4,
            }
          }
        />
      </View>
    </View>
  </View>
</View>
`;
